# creative-director

./: .colab_bridge.example  .dockerignore  .env.example  .gitignore  Dockerfile  app.py  codemagic.yaml  entrypoint.sh  gate_after_f1_engagement.txt  gate_after_f2_hooktext.txt  gate_after_f3_topic.txt  gate_after_f4_hookaudio.txt  gate_after_f5_music.txt  gate_final_all_features.txt  pyproject.toml  render.yaml  requirements-pod.txt  requirements-serve.txt  requirements.txt  start-demo.bat  start-demo.ps1  train_ig_fitness_compare.txt  transfer_test_ig_n1649.txt  v3_baselines.txt  v3_family.txt  v3_gate_compare.txt  v3_multiseed.txt  v3_sweep.txt  validate_advice.txt
.claude/: launch.json
api/: __init__.py  __main__.py  auth.py  benchmarks.py  config.py  main.py  schemas.py
colab_bridge/: server.py
creative_director/: config.py
docs/: CREATOR_XP_AUDIT.md  EXIT_ANALYSIS.md  IDEAS_FEATURE.md  IOS_APP.md  IOS_SUBMISSION.md  LAUNCH_KIT.md  LAUNCH_PLAYBOOK.md  LLM_HANDOFF.md  PROJECT_HISTORY.md  REVISION_LOOP_DESIGN.md  STORYBOARD_PROMPTS.md  STRATEGY.md
frontend/: .env.app  capacitor.config.ts  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
notebooks/: build_notebook.py  build_processor_notebook.py  colab_pipeline.ipynb  colab_processor.ipynb
scripts/: analyze_video.py  apify_cost.py  audit_music_info.py  audit_velocity_coverage.py  backfill_categories.py  backfill_description_embedding.py  backfill_engagement_prompts.py  backfill_hook_audio.py  backfill_hook_text.py  backfill_hook_visual.py  backfill_ig_from_apify.py  check_run.py  (+68 more)
(+169 files in other folders)
